But 990051: Fix height of sort menu on mobile.

--- a/static/css/zamboni/mobile.css
+++ b/static/css/zamboni/mobile.css
@@ -236,7 +236,7 @@ table th {
 
 #sort-menu.expand ul {
     border-color: #a9badb;
-    height: 407px;
+    height: auto;
 }
 .purchases #sort-menu.expand ul {
     height: 100px;
